--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ag-grid-community": "^27.0.1",
+    "ag-grid-enterprise": "^27.0.1",
+    "ag-grid-vue": "^27.0.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
